using Microsoft.AspNetCore.Authorization;
using Microsoft.AspNetCore.SignalR;

namespace LocMp.Notification.Api.Hubs;

[Authorize]
public sealed class NotificationHub : Hub;
