namespace LocMp.Notification.Domain.Enums;

public enum DeliveryChannel
{
    InApp = 1,
    Email = 2,
    Push = 3
}
