namespace LocMp.Notification.Domain.Enums;

public enum DeliveryStatus
{
    Pending = 1,
    Sent = 2,
    Failed = 3
}
