@startuml notification-service
title <size:16><b>NotificationService</b></size>\n<color:#555>Диаграмма классов (schema: notifs)</color>

' ─── Глобальные настройки стиля ──────────────────────────────────────────────
skinparam defaultFontName "Segoe UI", Arial, sans-serif
skinparam defaultFontSize 13
skinparam roundcorner 10
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam nodesep 60
skinparam ranksep 70

skinparam class {
    BackgroundColor White
    HeaderBackgroundColor #E0F7FA
    BorderColor #00838F
    BorderThickness 1.2
    ArrowColor #00838F
    ArrowThickness 1.2
    AttributeFontColor #2C3E50
}

skinparam enum {
    BackgroundColor White
    HeaderBackgroundColor #E0F2F1
    BorderColor #00695C
    BorderThickness 1.2
}

skinparam note {
    BackgroundColor #FFF9C4
    BorderColor #FBC02D
    FontColor #4E342E
    BorderThickness 1.2
    roundcorner 6
}

skinparam stereotypeCBackgroundColor #B2EBF2
skinparam stereotypeABackgroundColor #FDEBD0
skinparam stereotypeEBackgroundColor #D5F5E3

' ─── Enums ───────────────────────────────────────────────────────────────────

enum NotificationType {
    OrderPlaced       = 1
    OrderConfirmed    = 2
    OrderReadyForPickup = 3
    OrderInDelivery   = 4
    OrderCompleted    = 5
    OrderCancelled    = 6
    OrderDisputed     = 7
    StockDepleted     = 8
    ReviewReceived    = 9
    ReviewReplied     = 10
    SystemAlert       = 11
    SellerActivated   = 12
    AccountBlocked    = 13
    AccountUnblocked  = 14
    DisputeOpened     = 15
    DisputeResolved   = 16
    ProductRestocked  = 17
    NewMessage        = 18
}

enum DeliveryChannel {
    InApp
    Email
    Push
}

enum DeliveryStatus {
    Pending
    Sent
    Failed
}

' ─── Entities ────────────────────────────────────────────────────────────────

class Notification {
    + Id : Guid <<PK>>
    + UserId : Guid <<logical ref: Identity>>
    ..тип и содержимое..
    + Type : NotificationType
    + Title : string
    + Body : string
    ..доставка..
    + DeliveryChannel : DeliveryChannel
    + DeliveryStatus : DeliveryStatus
    + SentAt : DateTimeOffset?
    ..статус прочтения..
    + IsRead : bool
    + ReadAt : DateTimeOffset?
    ..контекст для диплинков в UI..
    + Payload : JsonDocument? <<jsonb>>
    + CreatedAt : DateTimeOffset
}

class UserNotificationPreference {
    + UserId : Guid <<PK, logical ref: Identity>>
    + OrderUpdates : bool
    + ReviewReplies : bool
    + SystemAlerts : bool
    + ChatMessages : bool
    ..email..
    + Email : string?
    + EmailEnabled : bool
    + EmailOrderUpdates : bool
    + EmailReviewReplies : bool
    + EmailChatMessages : bool
    ..
    + UpdatedAt : DateTimeOffset?
    --helpers (not persisted)--
    ~ CanEmailOrder : bool
    ~ CanEmailReview : bool
    ~ CanEmailSystem : bool
    ~ CanEmailMandatory : bool
    ~ CanEmailChat : bool
}

' ─── SignalR push infrastructure ─────────────────────────────────────────────

interface INotificationPusher <<interface>> {
    + PushAsync(userId, notification, ct) : Task
}

class NotificationPushDto <<record>> {
    + Id : Guid
    + Type : string
    + Title : string
    + Body : string
    + CreatedAt : DateTimeOffset
    --
    + {static} From(n : Notification) : NotificationPushDto
}

class NotificationHub <<SignalR Hub>> {
    .. [Authorize] ..
    .. пустой, фронтенд только слушает ..
}

class SignalRNotificationPusher {
    - hub : IHubContext<NotificationHub>
    --
    + PushAsync(userId, notification, ct) : Task
}

SignalRNotificationPusher ..|> INotificationPusher
SignalRNotificationPusher --> NotificationHub : IHubContext<>

' ─── Email infrastructure ────────────────────────────────────────────────────

interface IEmailService <<interface>> {
    + SendAsync(to, subject, htmlBody, ct) : Task
}

class SmtpEmailService {
    - options : SmtpOptions
    - logger : ILogger
    --
    + SendAsync(to, subject, htmlBody, ct) : Task
}

class EmailTemplates <<static>> {
    ..HTML из embedded resources (.html файлы)..
    + {static} OrderPlaced(total, orderId, actionUrl?) : (Subject, Body)
    + {static} OrderStatusChanged(statusText, orderId, actionUrl?) : (Subject, Body)
    + {static} OrderCompleted(orderId, actionUrl?) : (Subject, Body)
    + {static} DisputeOpened(orderId, actionUrl?) : (Subject, Body)
    + {static} DisputeResolved(orderId, outcome, actionUrl?) : (Subject, Body)
    + {static} ReviewCreated(rating, subjectType, subjectName?, actionUrl?) : (Subject, Body)
    + {static} StockDepleted(productName, actionUrl?) : (Subject, Body)
    + {static} ProductRestocked(productName, actionUrl?) : (Subject, Body)
    + {static} SellerActivated(displayName, actionUrl?) : (Subject, Body)
    + {static} AccountBlocked(blockedUntil) : (Subject, Body)
    + {static} AccountUnblocked() : (Subject, Body)
    - {static} Render(templateName, vars) : string
    - {static} Button(url?, label) : string
}

class FrontendOptions <<options>> {
    + BaseUrl : string
    ..URL builders..
    + OrderUrl(orderId) : string
    + SellerOrdersUrl() : string
    + SellerAnalyticsUrl() : string
    + ProductUrl(productId) : string
    + ProductEditUrl(productId) : string
    + SellerShopsUrl() : string
}

class GuidExtensions <<static>> {
    + {static} ToShortId(id : Guid) : string
    .. id.ToString("N")[^8..].ToUpperInvariant() ..
}

SmtpEmailService ..|> IEmailService
EmailTemplates ..> FrontendOptions : URL builders\n(injected via consumers)

' ─── Relationships ────────────────────────────────────────────────────────────

Notification ..> NotificationType
Notification ..> DeliveryChannel
Notification ..> DeliveryStatus

' ─── Notes ───────────────────────────────────────────────────────────────────

note right of Notification
  Сервис полностью реактивный:
  только потребляет события из MQ,
  REST API только для чтения (GET /notifications).
  Нет HTTP-вызовов от других сервисов.

  Payload (jsonb) — контекст для UI:
  {"orderId":"...", "orderNumber":"LM-2026-001"}
  {"productName":"...", "shopName":"..."}

  DeliveryChannel определяет
  способ отправки:
  InApp → запись в таблицу
         + SignalR push (WS)
  Email → SMTP-клиент
  Push  → FCM / APNs (future)
end note

note right of UserNotificationPreference
  1:1 с UserId из Identity.
  Создаётся автоматически при
  <<UserRegisteredEvent>>.
  Нет FK в БД — другой сервис.

  Email сохраняется из события
  UserRegisteredEvent.Email.

  Mandatory emails (AccountBlocked,
  DisputeOpened, DisputeResolved)
  игнорируют EmailEnabled — только
  требуют Email != null.
end note

note right of SmtpEmailService
  Использует MailKit.
  В dev — MailHog (:1025).
  Docker SMTP host: "mailhog" (не localhost).
  Ошибки SMTP логируются,
  но НЕ бросают исключение —
  consumer не падает при недоступном SMTP.
end note

note right of FrontendOptions
  Регистрируется через
  services.Configure<FrontendOptions>(
    configuration.GetSection("Frontend"))
  appsettings.json: { "Frontend": { "BaseUrl": "http://localhost:5173" } }

  Каждый consumer инжектирует
  IOptions<FrontendOptions> и передаёт
  actionUrl в метод EmailTemplates.*
end note

note right of EmailTemplates
  HTML-шаблоны компилируются
  в сборку как EmbeddedResource.
  Загружаются через
  Assembly.GetManifestResourceStream().

  {{placeholder}} заменяются через
  Render(name, Dictionary<string,string>).
  {{actionButton}} = Button(url?, label) —
  пустая строка если url == null.

  orderId отображается как
  id.ToString("N")[^8..].ToUpper()
  (последние 8 символов HEX).
end note

note bottom of NotificationType
  Каждый тип соответствует
  интеграционному событию
  из других сервисов.
  NotificationService подписан
  на все события через MassTransit.
  NewMessage (18) — из ChatMessageSentEvent
  для уведомлений о входящих сообщениях.
end note


' ─── Сводная таблица сущностей ───────────────────────────────────────────────

legend bottom
  <b>Таблицы сервиса (schema: notifs)</b>
  |= Класс C# |= Таблица в БД |= Описание |
  | Notification | Notifications | Уведомление пользователю с Payload (jsonb) для диплинков |
  | UserNotificationPreference | UserNotificationPreferences | Настройки уведомлений + email-преференсы (1:1 с пользователем) |

  <b>Инфраструктура SignalR push</b>
  |= Класс |= Тип |= Описание |
  | INotificationPusher | interface | Контракт мгновенного пуша в Domain |
  | SignalRNotificationPusher | class | Реализация через IHubContext<NotificationHub> |
  | NotificationHub | SignalR Hub | Пустой [Authorize] хаб, фронтенд только слушает |
  | NotificationPushDto | record | Payload пуша: Id, Type, Title, Body, CreatedAt |
  | SubClaimUserIdProvider | class | Читает "sub" claim для Clients.User() |

  <b>Инфраструктура email</b>
  |= Класс |= Тип |= Описание |
  | IEmailService | interface | Контракт отправки HTML-email |
  | SmtpEmailService | class | MailKit SMTP. Dev: MailHog :1025 (Docker host: mailhog) |
  | EmailTemplates | static class | 11 HTML-шаблонов как EmbeddedResource, Render() + Button() |
  | FrontendOptions | options class | URL-строители для action-кнопок в email (BaseUrl из конфига) |
  | GuidExtensions | static class | ToShortId() — последние 8 HEX символов GUID (как на фронтенде) |
endlegend

@enduml
